# rust_practice

./: Cargo.toml  cursor.md  readme.md
src/: main.rs  trait_object_practice.rs
