[package]
name = "basic_practice"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossbeam-epoch = "0.9"
rand = "0.8"

tokio = { version = "1.0", features = ["full"] }
http = "0.2"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.41", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
log = "0.4.29"
